- 
    Bug 
- 
    Resolution: Fixed
- 
     P2 P2
- 
    16, 17
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build | 
|---|---|---|---|---|---|---|
| JDK-8261115 | 17 | Jie Fu | P2 | Resolved | Fixed | b09 | 
| JDK-8260995 | 16.0.2 | Jie Fu | P2 | Resolved | Fixed | b01 | 
| JDK-8260949 | 16.0.1 | Jie Fu | P2 | Resolved | Fixed | b04 | 
                    Using the attached testcase, I get output similar to the following, but only when ZGC is enabled:
CompileCommand: compileonly jdk/incubator/vector/ByteVector.fromByteBuffer bool compileonly = true
WARNING: Using incubator modules: jdk.incubator.vector
input: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
Failing with Species[byte, 16, S_128_BIT]->Species[byte, 16, S_128_BIT] (reinterpret), block=16, part=0, origin=0
expect: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
output: [0, 0, 2, 2, 0, 4, 2, 6, 0, 0, 2, 2, 0, 4, 2, 6]
java.lang.Exception: Stack trace
at java.base/java.lang.Thread.dumpStack(Thread.java:1377)
at VectorReshapeTest.checkPartialResult(VectorReshapeTest.java:81)
at VectorReshapeTest.testVectorRebracket(VectorReshapeTest.java:107)
at VectorReshapeTest.testRebracket128(VectorReshapeTest.java:117)
at VectorReshapeTest.main(VectorReshapeTest.java:55)
The testcase has the instructions for compilation and execution.
            
CompileCommand: compileonly jdk/incubator/vector/ByteVector.fromByteBuffer bool compileonly = true
WARNING: Using incubator modules: jdk.incubator.vector
input: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
Failing with Species[byte, 16, S_128_BIT]->Species[byte, 16, S_128_BIT] (reinterpret), block=16, part=0, origin=0
expect: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
output: [0, 0, 2, 2, 0, 4, 2, 6, 0, 0, 2, 2, 0, 4, 2, 6]
java.lang.Exception: Stack trace
at java.base/java.lang.Thread.dumpStack(Thread.java:1377)
at VectorReshapeTest.checkPartialResult(VectorReshapeTest.java:81)
at VectorReshapeTest.testVectorRebracket(VectorReshapeTest.java:107)
at VectorReshapeTest.testRebracket128(VectorReshapeTest.java:117)
at VectorReshapeTest.main(VectorReshapeTest.java:55)
The testcase has the instructions for compilation and execution.
- backported by
- 
                    JDK-8260949 [vector] ZGC: VectorReshape test produces incorrect results with ZGC enabled -           
- Resolved
 
-         
- 
                    JDK-8260995 [vector] ZGC: VectorReshape test produces incorrect results with ZGC enabled -           
- Resolved
 
-         
- 
                    JDK-8261115 [vector] ZGC: VectorReshape test produces incorrect results with ZGC enabled -           
- Resolved
 
-         
- relates to
- 
                    JDK-8260682 Dedicate API should be provided for object loading in c2 optimization stage -           
- Open
 
-         
             (2 links to)
        
     
        