8260473: [vector] ZGC: VectorReshape test produces incorrect results with ZGC enabled